objects/MemberExpense__c.object
<CustomObject>
    <fields>
        <fullName>Contribution_amount__c</fullName>
        <label>Contribution amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Expense__c</fullName>
        <label>Expense</label>
        <referenceTo>Event__c</referenceTo>
        <relationshipLabel>MemberExpenses</relationshipLabel>
        <relationshipName>MemberExpenses</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Member__c</fullName>
        <label>Member</label>
        <referenceTo>Member__c</referenceTo>
        <relationshipLabel>MemberExpenses</relationshipLabel>
        <relationshipName>MemberExpenses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>MemberExpense</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>MemExp-{0000}</displayFormat>
        <label>MemberExpense Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MemberExpenses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>